--- a/pom.xml
+++ b/pom.xml
@@ -22,35 +22,36 @@
     <spring-boot.version>2.1.2.RELEASE</spring-boot.version>
   </properties>
 
+  <parent>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-parent</artifactId>
+    <version>2.1.2.RELEASE</version>
+  </parent>
+
   <dependencyManagement>
     <dependencies>
+      <!--Spring boot-->
+      <!--<dependency>-->
+        <!--<groupId>org.springframework.boot</groupId>-->
+        <!--<artifactId>spring-boot-starter-data-jpa</artifactId>-->
+        <!--<version>2.0.0.RELEASE</version>-->
+      <!--</dependency>-->
       <dependency>
         <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
+        <artifactId>spring-boot-starter-websocket</artifactId>
         <version>${spring-boot.version}</version>
       </dependency>
       <dependency>
         <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-data-jpa</artifactId>
+        <artifactId>spring-boot-starter-security</artifactId>
         <version>2.0.0.RELEASE</version>
       </dependency>
-      <!--Web Socket-->
+      <!--GSON-->
       <dependency>
-        <groupId>org.webjars</groupId>
-        <artifactId>webjars-locator-core</artifactId>
-        <version>0.35</version>
+        <groupId>com.google.code.gson</groupId>
+        <artifactId>gson</artifactId>
+        <version>2.8.5</version>
       </dependency>
-      <dependency>
-        <groupId>org.webjars</groupId>
-        <artifactId>sockjs-client</artifactId>
-        <version>1.0.2</version>
-      </dependency>
-      <dependency>
-        <groupId>org.webjars</groupId>
-        <artifactId>stomp-websocket</artifactId>
-        <version>2.3.3</version>
-      </dependency>
-
     </dependencies>
   </dependencyManagement>
 
@@ -63,20 +64,14 @@
   </dependencies>
 
   <build>
-    <plugins>
-      <!--<plugin>-->
-        <!--<artifactId>maven-compiler-plugin</artifactId>-->
-        <!--<version>3.8.0</version>-->
-        <!--<configuration>-->
-          <!--<source>${maven.compiler.source}</source>-->
-          <!--<target>${maven.compiler.target}</target>-->
-        <!--</configuration>-->
-      <!--</plugin>-->
-      <plugin>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-maven-plugin</artifactId>
-        <version>${spring-boot.version}</version>
-      </plugin>
-    </plugins>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-maven-plugin</artifactId>
+          <version>${spring-boot.version}</version>
+        </plugin>
+      </plugins>
+    </pluginManagement>
   </build>
 </project>
